# libbarcode

./: CMakeLists.txt  Makefile.am  autogen.sh  barcode.pc.in  configure.ac  gtin.cpp  gtin.h  gtin_chararray.cpp  gtin_checksum.cpp  gtin_data.cpp  gtin_get_parts.cpp  gtin_log.cpp  makefile  test.cpp
doc/: CMakeLists.txt  doxygen.conf
src/: CMakeLists.txt  Makefile.am
src/barcode/: CMakeLists.txt  barcode.cpp  barcode.h  barcode.hpp  chararray.cpp  data.cpp
src/barcode_base/: CMakeLists.txt  barcode.cpp  barcode.hpp  data.cpp  operator.cpp
src/barcode_numeric/: CMakeLists.txt  data.cpp  numeric.cpp  numeric.hpp
src/gtin/: CMakeLists.txt  Makefile.am  checksum.c  checksum.h  data.cpp  gtin.cpp  gtin.h  gtin.hpp  gtin_chararray.cpp  gtin_checksum.cpp  gtin_data.cpp  validate.c  validate_charset.c  validate_length.c
tests/: CMakeLists.txt
tests/barcode/: CMakeLists.txt  set_data.cpp  set_data_substring.cpp
tests/barcode/data/: CMakeLists.txt  get_data.cpp  set_data_buffer.cpp  set_data_cstring.cpp  set_data_string.cpp  set_data_substring.cpp
tests/barcode_base/: CMakeLists.txt  assign_data_string.cpp  assign_data_substring.cpp  constructor.cpp  constructor_assign_string.cpp  constructor_assign_substring.cpp  operator_assign_string.cpp  set_data_string.cpp
tests/barcode_numeric/: CMakeLists.txt  assign_data_invalid.cpp  assign_data_valid.cpp  constructor.cpp  constructor_assign_string.cpp  constructor_assign_substring.cpp  get_data.cpp  set_data_not_numeric_not_accepted.cpp  set_data_numeric_accepted.cpp
tests/gtin/: CMakeLists.txt  assign_data_invalid.cpp  assign_data_valid.cpp  charset.c  checksum.c  length.c  set_data_invalid.cpp  set_data_valid.cpp
